# vtc-go

./: .gitmodules  README.md  azure-pipelines.yaml  doc.go  exampleDemo_test.go  go.mod  go.sum  makefile  pip-freeze.txt  revive.toml  setup.cfg
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/_static/: godoc.3.html  godoc.5.html
pkg/: doc_api.go  functions.go  functions_test.go
pkg/internal/: ratfuncs.go  ratfuncs_test.go
pkg/internal/testdata/: testTimelines.go  testTimelines_test.go
pkg/rate/: doc.go  errors.go  examples_test.go  framerate.go  framerate_private_test.go  framerate_test.go  ntsc.go  parsers.go
pkg/tc/: consts.go  doc.go  dropframe.go  errors.go  examples_test.go  parsers.go  table_test.go  timecode.go  timecodeOps.go  timecodeOps_test.go  timecodeParse_test.go  timecode_parsers.go  timecode_test.go
zdocs/source/: conf.py
zdocs/source/_static/: godoc-root.html  godoc.4.html  godoc.5.html
