[version]
target = 0.0
release = 0.0.3

[metadata]
name = vtc
git_org = github.com/opencinemac

[testing]
timeout = 60
coverage_required = 1.0
race_detection = true
multi_process = true
test_package = ./...
exclude = 
	./zdevelop

[options]
setup_requires = 
	setuptools
install_requires = 
tests_require = 
dependency_links = 

[docs.proto]
paths = 

[proto]
root_source_path = 
root_go_package = 
python_output_path = 
python_import_original = 
python_import_replacement = 

[options.extras_require]
dev = 
lint = 
doc = 
	sphinx
	sphinx_rtd_theme
build = 
	packaging
test = 

[build_sphinx]
project = vtc
copyright = '2021, Open Cinema Collective'
source-dir = ./zdocs/source
build-dir = ./zdocs/build

